Initial connecting back to front

--- a/client/index.html
+++ b/client/index.html
@@ -37,9 +37,7 @@
     <form>
         <label for="method">Select Method:</label>
         <select id="method" name="method">
-            <option value="linear">Linear Regression</option>
-            <option value="tree">Decision Tree</option>
-            <option value="svm">SVM</option>
+            <option value="random_forest">Random Forest</option>
         </select>
         <br>
         <label for="input-data">Enter Your Data:</label>
