--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,13 @@
 <section id="prediction">
     <h2>Prediction</h2>
     <form>
+        <label for="model_name">Choose Model:</label>
+        <select id="model_name">
+            <option value="random_forest">Random Forest</option>
+            <option value="xgb_regressor">XGB Regressor</option>
+            <option value="decision_tree">Decision Tree</option>
+        </select><br>
+
         <label for="g1">G1 (0-20):</label>
         <input type="number" id="g1" min="0" max="20" placeholder="Enter G1"><br>
 
